--- a/frontend/react-flask-app/src/ProfilePage.css
+++ b/frontend/react-flask-app/src/ProfilePage.css
@@ -1,4 +1,4 @@
-/* MatchedPage.css */
+/* ProfilePage.css */
 body {
   align: center;
   font-size: 16px; /* Default font size for the body */
@@ -10,17 +10,8 @@ body {
   flex-direction: column;
 }
 
-.desc {
-  font-size: 20px;
-}
-
 .title {
   font-size: 28px;
-}
-
-a {
-  color: black;
-  font-size: 24px;
 }
 
 .banner {
@@ -67,22 +58,25 @@ a {
   text-align: center; /* Center-align the content */
 }
 
-/* List of Items in Rectangular Tiles */
-.item-list {
-  display: inline-block; /* Make it an inline block to center with margin: 0 auto; */
-  margin: 0 auto; /* Center the items horizontally */
+.fieldbtn {
+background: none;
+border: none;
+cursor: pointer;
+font-size: 12px;
+opacity: 0.5;
+margin-left: 5px;
 }
 
-.item-tile {
-  width: 1000px; /* Adjusted width and margin as needed */
-  /*max-width: 300px; /* Set a maximum width for each item */
-  background-color: #eceff1; /* Tile background color */
-  padding: 15px;
-  margin: 0 10px 20px 10px; /* Adjusted margin */
-  box-sizing: border-box;
-  font-size: 20px; /* Adjusted font size for the item tiles */
+.addbtn {
+  background-color: #000000;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'fantasy','copperplate',sans-serif;
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 
-
-/* Add more styles as needed */
